<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="707dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:text="Sign Up"
                    android:textColor="@color/grey1"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_border"
                    android:hint="@string/username"
                    android:minHeight="48dp"
                    tools:ignore="VisualLintTextFieldSize" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="320dp"
                    android:layout_marginTop="-47dp"
                    android:layout_marginBottom="23dp"
                    android:src="@drawable/icon_username" />

                <EditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_border"
                    android:hint="@string/email_EditText"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    tools:ignore="VisualLintTextFieldSize" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="320dp"
                    android:layout_marginTop="-47dp"
                    android:layout_marginBottom="23dp"
                    android:src="@drawable/icon_email" />

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_border"
                    android:hint="@string/password_EditText"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    tools:ignore="VisualLintTextFieldSize" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="320dp"
                    android:layout_marginTop="-47dp"
                    android:layout_marginBottom="23dp"
                    android:src="@drawable/icon_password" />

                <EditText
                    android:id="@+id/confirmPassword_input"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_border"
                    android:hint="@string/confirm_password_EDT"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    tools:ignore="VisualLintTextFieldSize" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="320dp"
                    android:layout_marginTop="-37dp"
                    android:layout_marginBottom="23dp"
                    android:src="@drawable/icon_password" />

                <TextView
                    android:id="@+id/textView_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="25dp"
                    android:text="Select your country !"
                    android:textSize="12sp"
                    tools:ignore="TextSizeCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/pays_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="40dp"
                        android:background="@drawable/edittext_border"
                        android:spinnerMode="dropdown" />

                    <ImageView
                        android:id="@+id/pays_image"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="280dp"
                        android:layout_marginTop="-76dp"
                        android:layout_marginBottom="40dp"
                        android:src="@drawable/flag_belgium" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="324dp"
                        android:layout_marginTop="-63dp"
                        android:layout_marginBottom="40dp"
                        android:src="@mipmap/fleche" />

                </LinearLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/checkbox_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="I agree to share my information"
                android:textColor="@color/grey2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.14"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="15dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.2"
                tools:ignore="VisualLintButtonSize" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.048" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:background="@drawable/rounded_button"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_accept"
                app:layout_constraintVertical_bias="0.081"
                tools:ignore="VisualLintButtonSize" />

            <TextView
                android:id="@+id/alreadyAccount_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_log_in"
                android:textColor="@color/grey2"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_button"
                app:layout_constraintVertical_bias="0.078" />

        </LinearLayout>
    </ScrollView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/_2023_tous_droits_r_serv_TXTV"
            android:textColor="#546E7A"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
            app:layout_constraintVertical_bias="0.848" />



</androidx.constraintlayout.widget.ConstraintLayout>
